spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-catalog-watcher/src/test/resources/app/watcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-fabric8-client-catalog-watcher
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-fabric8-client-catalog-watcher
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-fabric8-client-catalog-watcher
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-fabric8-client-catalog-watcher
          image: docker.io/springcloud/spring-cloud-kubernetes-fabric8-client-catalog-watcher
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
