spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-catalog-watcher/src/test/resources/app/watcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-fabric8-client-catalog-watcher
  name: spring-cloud-kubernetes-fabric8-client-catalog-watcher
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-fabric8-client-catalog-watcher
  type: ClusterIP
